--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -190,6 +190,7 @@ section#work {
 
                 p {
                     margin: 0;
+                    padding: $gutter;
                 }
 
             }
